[package]
name = "web-local-storage-api"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A pure Rust implementation of the Web LocalStorage API, for use in non-browser contexts"
homepage = "https://github.com/richardanaya/web-local-storage-api"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
parking_lot = "0.11.2" 
lazy_static = "1.4.0"
directories = "4"